Arreglado enemigo + VelocidadMax
he arreglado lo que funcionaba raro del enemigo basico y he añadido una variable de VelocidadMax al jugador para que se pueda ir mas rapido con las bombas que moviendose normal pero no sea un descontrol el tema

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,6 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Game Lab/Assets/TextMesh Pro/Examples & Extras/Resources/Fonts & Materials/Roboto-Bold SDF.asset
+Game Lab/Assets/TextMesh Pro/Examples & Extras/Resources/Fonts & Materials/Anton SDF.asset
+Game Lab/Assets/TextMesh Pro/Examples & Extras/Resources/Fonts & Materials/Oswald Bold SDF.asset
